--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
-title: Archive
+title: 归档
 layout: default
-description: "「我干了什么 究竟拿了时间换了什么」"
+description: "慢就是快，欲速则不达"
 header-img: "img/tag-bg.jpg"
 ---
 
