--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "《你是我的梦想》"
+title: "关于"
+description: ""
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
@@ -12,12 +12,6 @@ multilingual: true
 <div class="zh post-container">
     {% capture about_zh %}{% include about/zh.md %}{% endcapture %}
     {{ about_zh | markdownify }}
-</div>
-
-<!-- English Version -->
-<div class="en post-container">
-    {% capture about_en %}{% include about/en.md %}{% endcapture %}
-    {{ about_en | markdownify }}
 </div>
 
 
