--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "「离开世界之前 一切都是过程」"
+description: "「正确的判断来源于经验，然而经验来源于错误的判断。」"
 ---
 
 {% for post in paginator.posts %}
