--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 layout: default
 title: 404
 hide-in-nav: true
-description: "技术无涯..."
+description: "你来到了没有知识的荒原 :("
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
