--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
-title: 归档
+title: Archive
 layout: default
-description: "慢就是快，欲速则不达"
+description: keep hungry keep foolish
 header-img: "img/tag-bg.jpg"
 ---
 
@@ -31,10 +31,10 @@ https://github.com/kitian616/jekyll-TeXt-theme
 					title="{{ tag[0] }}" rel="{{ tag[1].size }}">
 					{{ tag[0] }}
 					<sup>{{tag[1].size}}</sup>
-				</a>__SEPERATOR__
+				</a>
 				{% endfor %}
 				{% endcapture %}
-        {{ tags | split:'__SEPERATOR__' | sort }}
+        {{ tags | split:'</a>' | sort | join:'</a>' }}
 			</div>
 
             <!-- Article List -->
@@ -79,9 +79,7 @@ https://github.com/kitian616/jekyll-TeXt-theme
 				    </a>
 					<hr>
 				</div>
-			{%- if forloop.last -%}</section>{%- endif -%}
 			{% endfor %}
-			</div>
 		</div>
 	</div>
 </div>
